<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingTop="32dp"
        android:paddingEnd="32dp"
        android:paddingBottom="32dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_title"
            android:textAppearance="@android:style/TextAppearance.Material.Headline"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/showBootDiagnosticsSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/show_boot_diagnostics" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/show_boot_diagnostics_summary"
            android:textAppearance="@android:style/TextAppearance.Material.Body2" />

        <Switch
            android:id="@+id/saveRecentBootLogsSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/save_recent_boot_logs" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/save_recent_boot_logs_summary"
            android:textAppearance="@android:style/TextAppearance.Material.Body2" />

        <Switch
            android:id="@+id/forceAdbAlwaysSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/force_adb_always" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/force_adb_always_summary"
            android:textAppearance="@android:style/TextAppearance.Material.Body2" />

        <Button
            android:id="@+id/closeSettingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/close_settings" />

    </LinearLayout>
</ScrollView>
